--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         body { margin: 0; padding: 0; }
         #map { position: absolute; top: 0; bottom: 0; width: 100%; }
         #form { position: absolute; top: 15px; left: 15px; z-index: 1; }
+        #header { position: absolute; top: 15px; right: 15px; z-index: 1; background-color: white; }
     </style>
 
 </head>
@@ -24,6 +25,7 @@
     </form>
 
     <div id="map"></div>
+    <div id="header">Purple is start node</div>
 
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.8.0/mapbox-gl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/openlr-js@latest/lib/browser/bundle.min.js"></script>
