disable map rotation

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         center: [-74.5, 40], // starting position [lng, lat]
         zoom: 1 // starting zoom
     });
+    map.dragRotate.disable();
 
     // Example OpenLRs
     // CwNhbCU+jzPLAwD0/34zGw==
